# mcp-server

./: .gitignore  README.md  pyproject.toml
src/mcp_server/: __init__.py  registry.py  repo.py  responses.py  server.py
src/mcp_server/engines/: aggregate_engine.py  responses.py  row_list_engine.py  top_row_engine.py  unique_values_engine.py
tests/: conftest.py  test_plugin_loading.py  test_registry_instructions.py  test_server.py
